--- a/src/style.css
+++ b/src/style.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  @apply min-h-full bg-default text-white;
+	@apply min-h-full bg-gradient-end text-white bg-gradient-to-br from-gradient-start to-gradient-end to-80%;
 }
