feat: add default h2 style

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+	h2 {
+		@apply text-3xl font-bold;
+	}
+}
+
 @layer components {
 	.default-button {
 		background: theme(colors.button);
@@ -9,7 +15,7 @@
 		padding: theme(padding.4) theme(padding.6);
 		margin-top: theme(margin.4);
 		border-radius: theme(borderRadius.xl);
-		transition: theme(transitionProperty.colors);
+		transition: theme(transitionDuration.200) theme(transitionProperty.colors);
 		&:hover {
 			background-color: theme(colors.button-hover);
 		}
@@ -18,8 +24,4 @@
 
 body {
 	@apply min-h-full bg-gradient-end text-white bg-gradient-to-br from-gradient-start to-gradient-end to-80%;
-
-	code {
-		@apply bg-[#202122] px-2 py-1 mx-0.5 rounded-sm;
-	}
 }
