feat: make size mandatory when element is a dialog

--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,12 @@
 		&:hover {
 			background-color: theme(backgroundColor.button-hover);
 		}
+		&:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+			background: theme(backgroundColor.disabled);
+			
+    }
 	}
 }
 
