--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,10 @@
 	h2 {
 		@apply text-3xl font-bold;
 	}
+
+	a {
+		@apply text-lg text-accent-blue hover:font-semibold cursor-pointer;
+	}
 }
 
 @layer components {
@@ -27,10 +31,10 @@
 			background-color: theme(backgroundColor.primary-button-hover);
 		}
 		&:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
+			opacity: 0.5;
+			cursor: not-allowed;
 			background: theme(backgroundColor.disabled);
-    }
+		}
 	}
 }
 
